# ficct-boutique-backend-python

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy-ms2-gcp.yml
apps/ai_catalog/: apps.py  urls.py
apps/ai_catalog/serializers/: __init__.py
apps/ai_catalog/services/: catalog_sync_service.py  embedding_service.py  similarity_service.py
apps/ai_catalog/tests/: test_embedding_service.py
apps/ai_catalog/viewsets/: __init__.py
apps/clustering/: apps.py  urls.py
apps/clustering/serializers/: __init__.py
apps/clustering/services/: clustering_service.py
apps/clustering/tests/: test_clustering_service.py
apps/clustering/viewsets/: __init__.py
apps/common/: apps.py
apps/common/auth/: jwt_authentication.py  permissions.py
apps/common/dynamodb/: client.py  schema.py
apps/common/management/commands/: ensure_tables.py
apps/common/tests/: test_cors.py
apps/common/views/: health.py
apps/forecasting/: apps.py  urls.py
apps/forecasting/serializers/: __init__.py
apps/forecasting/services/: forecast_service.py
apps/forecasting/tests/: test_forecast_service.py
apps/forecasting/viewsets/: __init__.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docs/: DEPLOY_GCP.md
docs/architecture/: ALGORITHMS.md  REST_API.md  SYSTEM_OVERVIEW.md
docs/development/: ENVIRONMENT.md  RUNNING_LOCALLY.md
requirements/: base.txt  dev.txt
