[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
    migrations
  | staticfiles
  | media
  | \.tools
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["apps", "config"]
skip = ["migrations", "staticfiles", "media", ".tools"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that require a running database or DynamoDB connection",
    "slow: tests that take noticeable time",
]
